/*
Copyright 2018 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

//
// Represents a scheduling change to be applied.

syntax = "proto3";

package firmament;

// SchedulingDelta is a scheduling decision from previous state.
message SchedulingDelta {
  enum ChangeType {
    // NOOP indicates does not change the previous scheduling state.
    NOOP = 0;
    // PLACE indicates schedule a task onto a node.
    PLACE = 1;
    // PREEMPT indicates a task preempt some tasks' resouces.
    PREEMPT = 2;
    // MIGRATE indicates migrate a task from one node the other node.
    MIGRATE = 3;
  }

  uint64 task_id = 1;
  string resource_id = 2;
  // type is the scheduling decision type.
  ChangeType type = 3;
}
